<resources>
    <string name="app_name">mySensorApp</string>
    <string name="login">LOGIN</string>
    <string name="ingreso">INGRESO</string>
    <string name="email">Email</string>
    <string name="contra">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="name">Nombre</string>
    <string name="secondname">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="ret">Volver</string>
    <string name="panel_adm">Panel Administrador</string>
    <string name="panel_tech">Panel Técnico</string>
    <string name="panel_cli">Panel Cliente</string>
    <string name="modify_users">Modificar usuarios</string>
    <string name="modify_sensors">Modificar sensores</string>
    <string name="create_sensors">Crear sensores</string>
    <string name="register">Registro</string>
    <string name="search">Buscar</string>
    <string name="modify">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="continu">Continuar</string>
    <string name="title_activity_panelcliente">panelcliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_sn">Seleccione un sensor</string>
    <string name="clarity">Clarity Node S</string>
    <string name="modulair">Modulair PM</string>

    <string name="action">Salir</string>

    <string name="menu_home">Mis sensores</string>
    <string name="menu_contact">Contáctenos</string>
    <string name="menu_about">Acerca de nosotros</string>
    <string name="email1">rflorez62@unisalle.edu.co</string>
    <string name="email2">darias82@unisalle.edu.co</string>
    <string name="www">www.nocquepaginaes.com</string>
    <string name="ph1">Cell: 3192798625</string>
    <string name="ph2">Cell: 3112091585</string>
    <string name="nav_header_desc">MySensorAPP</string>


</resources>