<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".crudusuarios">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="325dp"
        android:layout_height="436dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="false"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@color/white" />

    <EditText
        android:id="@+id/id_email_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/id_apellido_crud"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="165dp"
        android:layout_height="37dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="28dp"
        android:onClick="back"
        android:text="@string/ret"
        app:icon="@mipmap/ret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/id_apellido_crud"
        app:layout_constraintTop_toTopOf="@+id/id_apellido_crud"
        app:srcCompat="@mipmap/secondname" />

    <EditText
        android:id="@+id/id_nombre_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/id_email_crud"
        app:layout_constraintTop_toTopOf="@+id/id_email_crud"
        app:srcCompat="@mipmap/email" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/id_nombre_crud"
        app:layout_constraintTop_toTopOf="@+id/id_nombre_crud"
        app:srcCompat="@mipmap/name" />

    <EditText
        android:id="@+id/id_phone_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/spinner_crud"
        app:layout_constraintTop_toTopOf="@+id/spinner_crud"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/id_password_crud"
        app:layout_constraintTop_toTopOf="@+id/id_password_crud"
        app:srcCompat="@mipmap/key" />

    <EditText
        android:id="@+id/id_password_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/id_email_crud"
        app:layout_constraintTop_toTopOf="@+id/id_email_crud"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/modify_users"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="28dp"
        android:onClick="btnContinuar"
        android:text="@string/continu"
        app:icon="@mipmap/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/id_apellido_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/id_nombre_crud"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/id_phone_crud"
        app:layout_constraintTop_toTopOf="@+id/id_phone_crud"
        app:srcCompat="@mipmap/phone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="106dp"
        android:layout_height="99dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="188dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11">

        <RadioButton
            android:id="@+id/rButton_register"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:checked="true"
            android:text="@string/register"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rButtonFind"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/search" />

        <RadioButton
            android:id="@+id/rButtonModify"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/modify" />

        <RadioButton
            android:id="@+id/rButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/delete" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="404dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:srcCompat="@mipmap/crud" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_crud"
        app:layout_constraintTop_toTopOf="@+id/spinner_crud"
        app:srcCompat="@mipmap/usertype" />

    <Spinner
        android:id="@+id/spinner_crud"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="@+id/id_password_crud"
        app:layout_constraintTop_toTopOf="@+id/id_password_crud"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>